// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`linkHeaderPagination > converts boolean and number values to strings in query 1`] = `
{
  "Link": "<https://api.example.com/v1/?active=true&count=42&showDeleted=false&page=1>; rel="current", <https://api.example.com/v1/?active=true&count=42&showDeleted=false&page=2>; rel="next", <https://api.example.com/v1/?active=true&count=42&showDeleted=false&page=2>; rel="last"",
  "X-Items-From": "1",
  "X-Items-Per-Page": "10",
  "X-Items-To": "10",
  "X-Items-Total": "20",
}
`;

exports[`linkHeaderPagination > generates correct headers for basic pagination 1`] = `
{
  "Link": "</?page=1>; rel="current", </?page=2>; rel="next", </?page=3>; rel="last"",
  "X-Items-From": "1",
  "X-Items-Per-Page": "10",
  "X-Items-To": "10",
  "X-Items-Total": "25",
}
`;

exports[`linkHeaderPagination > handles empty total 1`] = `
{
  "X-Items-From": "0",
  "X-Items-Per-Page": "10",
  "X-Items-To": "0",
  "X-Items-Total": "0",
}
`;

exports[`linkHeaderPagination > handles last page 1`] = `
{
  "Link": "</?page=3>; rel="current", </?page=1>; rel="first", </?page=2>; rel="prev"",
  "X-Items-From": "21",
  "X-Items-Per-Page": "10",
  "X-Items-To": "25",
  "X-Items-Total": "25",
}
`;

exports[`linkHeaderPagination > handles page beyond available data 1`] = `
{
  "Link": "</?page=5>; rel="current", </?page=1>; rel="first", </?page=2>; rel="prev"",
  "X-Items-From": "0",
  "X-Items-Per-Page": "10",
  "X-Items-To": "0",
  "X-Items-Total": "20",
}
`;

exports[`linkHeaderPagination > ignores null or undefined values in query 1`] = `
{
  "Link": "<https://api.example.com/v1/?filter=active&page=1>; rel="current", <https://api.example.com/v1/?filter=active&page=2>; rel="next", <https://api.example.com/v1/?filter=active&page=2>; rel="last"",
  "X-Items-From": "1",
  "X-Items-Per-Page": "10",
  "X-Items-To": "10",
  "X-Items-Total": "20",
}
`;

exports[`linkHeaderPagination > includes baseUrl and query parameters in links 1`] = `
{
  "Link": "<https://api.example.com/v1/?sort=name&order=desc&filter=active&page=1>; rel="current", <https://api.example.com/v1/?sort=name&order=desc&filter=active&page=2>; rel="next", <https://api.example.com/v1/?sort=name&order=desc&filter=active&page=3>; rel="last"",
  "X-Items-From": "1",
  "X-Items-Per-Page": "10",
  "X-Items-To": "10",
  "X-Items-Total": "30",
}
`;

exports[`linkHeaderPagination > includes custom links when provided 1`] = `
{
  "Link": "<https://api.example.com/v1/?page=1>; rel="current", <https://api.example.com/v1/?page=2>; rel="next", <https://api.example.com/v1/?page=2>; rel="last", <https://example.com/resource>; rel="canonical", <https://example.com/resource.json>; rel="alternate"",
  "X-Items-From": "1",
  "X-Items-Per-Page": "10",
  "X-Items-To": "10",
  "X-Items-Total": "20",
}
`;

exports[`linkHeaderPagination > overrides page parameter in query 1`] = `
{
  "Link": "<https://api.example.com/v1/?page=2&sort=date>; rel="current", <https://api.example.com/v1/?page=1&sort=date>; rel="first", <https://api.example.com/v1/?page=1&sort=date>; rel="prev", <https://api.example.com/v1/?page=3&sort=date>; rel="next", <https://api.example.com/v1/?page=3&sort=date>; rel="last"",
  "X-Items-From": "6",
  "X-Items-Per-Page": "5",
  "X-Items-To": "10",
  "X-Items-Total": "15",
}
`;

exports[`linkHeaderPagination > properly encodes special characters in query parameters 1`] = `
{
  "Link": "<https://api.example.com/v1/?search=test+%26+example&category=books%2Bmovies&page=1>; rel="current", <https://api.example.com/v1/?search=test+%26+example&category=books%2Bmovies&page=2>; rel="next", <https://api.example.com/v1/?search=test+%26+example&category=books%2Bmovies&page=2>; rel="last"",
  "X-Items-From": "1",
  "X-Items-Per-Page": "10",
  "X-Items-To": "10",
  "X-Items-Total": "20",
}
`;
